--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -1,106 +1,62 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿
+@using FluentMvcGrid.Core
+@using Microsoft.ApplicationInsights.AspNetCore.Extensions
+@using Microsoft.AspNetCore.Http.Extensions
+
+@model WebApplication1.ViewModels.Home.HomeIndexViewModel
+
+@{
+    ViewBag.Title = "Index";
+    //var a = Html.ViewData;
 }
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-        <li data-target="#myCarousel" data-slide-to="3"></li>
-    </ol>
-    <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how to build ASP.NET apps that can run anywhere.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    There are powerful new features in Visual Studio for building modern web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner3.svg" alt="Package Management" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Bring in libraries from NuGet and npm, and automate tasks using Grunt or Gulp.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525029&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner4.svg" alt="Microsoft Azure" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-    </div>
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
+@(Html.FluentMvcGrid(Model.Data, Context.Request.GetUri())
+              .Class("table table-striped table-hover table-bordered")
+              .Configuration(cfg => cfg
+                  .BootstrapVersion(BootstrapVersion.Bootstrap3)
+                  .WhiteSpace(WhiteSpace.Nbsp))
+              .AddColumn(c => c
+                  .Format(item => item.FirstName)
+                  .HeaderText("Nombre")
+                  .Sortable(true)
+                  .OnSort("sort")
+                  .SortBy("FirstName")
+                  .Visibility(() => ColumnVisibility.Visible))
+              .AddColumn(c => c
+                  .Format(item => item.LastName)
+                  .HeaderText("Apellidos")
+                  .Sortable(true)
+                  .SortBy("LastName")
+                  .Name("LastName2"))
+              .AddColumn("Edad", item => item.Age)
+              .AddColumn(c => c.Format(item => item.Gender == Gender.Male ? "Hombre" : "Mujer").HeaderText("Género"))
+              .AddColumn(c => c.Format(@<text>@(string.Format("{0:d}", item.Birthday))</text>).HeaderText("Cumpleaños"))
+                          .AddFooterColumn(fc => fc.Format(item => "footer1"))
+                          .AddFooterColumn(fc => fc.Format(item => "footer2").Visibility(() => ColumnVisibility.Hidden))
+                          .AddFooterColumn(fc => fc.Format(item => "footer3"))
+                          .Pagination(pagination => pagination
+                              .PageIndex(Model.PageIndex)
+                              .TotalCount(Model.TotalCount)
+                              //.RemovedParameters(new[] { "fake"})
+                              //.AddedParameters(new Dictionary<string, string>()
+                              //{
+                              //    { "debug", "true"},
+                              //    { "stage", "producción evolutiva"}
+                              //})
+                              )
+                          .Eof(@<p>No hay registros que mostrar</p>)
+                                                              .Url(new Uri("http://localhost:36513/Home/Index?param1=óvalue11&param1=value12&param2=value2"))
+                                                                  .HeadersIfEof(true))
+      .HeadersIfEof(true))
 
-<div class="row">
-    <div class="col-md-3">
-        <h2>Application uses</h2>
-        <ul>
-            <li>Sample pages using ASP.NET Core MVC</li>
-            <li>Theming using <a href="https://go.microsoft.com/fwlink/?LinkID=398939">Bootstrap</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>How to</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398600">Add a Controller and View</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699315">Manage User Secrets using Secret Manager.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699316">Use logging to log a message.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699317">Add packages using NuGet.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699319">Target development, staging or production environment.</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Overview</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET Core</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699320">Fundamentals of ASP.NET Core such as Startup and middleware.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398602">Working with Data</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398603">Security</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699321">Client side development</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699322">Develop on different platforms</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699323">Read more on the documentation site</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Run &amp; Deploy</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517853">Run tools such as EF migrations and more</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure Web Apps</a></li>
-        </ul>
-    </div>
-</div>
+<script>
+    function sort(url, sortBy, sortDir) {
+        console.log(url);
+        console.log(sortBy);
+        console.log(sortDir);
+    }
+    function paginate(url, page) {
+        console.log(url);
+        console.log(page);
+    }
+</script>
