--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -11,43 +11,44 @@
 }
 
 @(Html.FluentMvcGrid(Model.Data, Context.Request.GetUri())
-              .Class("table table-striped table-hover table-bordered")
-              .Configuration(cfg => cfg
-                  .BootstrapVersion(BootstrapVersion.Bootstrap3)
-                  .WhiteSpace(WhiteSpace.Nbsp))
-              .AddColumn(c => c
-                  .Format(item => item.FirstName)
-                  .HeaderText("Nombre")
-                  .Sortable(true)
-                  .OnSort("sort")
-                  .SortBy("FirstName")
-                  .Visibility(() => ColumnVisibility.Visible))
-              .AddColumn(c => c
-                  .Format(item => item.LastName)
-                  .HeaderText("Apellidos")
-                  .Sortable(true)
-                  .SortBy("LastName")
-                  .Name("LastName2"))
-              .AddColumn("Edad", item => item.Age)
-              .AddColumn(c => c.Format(item => item.Gender == Gender.Male ? "Hombre" : "Mujer").HeaderText("Género"))
-              .AddColumn(c => c.Format(@<text>@(string.Format("{0:d}", item.Birthday))</text>).HeaderText("Cumpleaños"))
-                          .AddFooterColumn(fc => fc.Format(item => "footer1"))
-                          .AddFooterColumn(fc => fc.Format(item => "footer2").Visibility(() => ColumnVisibility.Hidden))
-                          .AddFooterColumn(fc => fc.Format(item => "footer3"))
-                          .Pagination(pagination => pagination
-                              .PageIndex(Model.PageIndex)
-                              .TotalCount(Model.TotalCount)
-                              //.RemovedParameters(new[] { "fake"})
-                              //.AddedParameters(new Dictionary<string, string>()
-                              //{
-                              //    { "debug", "true"},
-                              //    { "stage", "producción evolutiva"}
-                              //})
-                              )
-                          .Eof(@<p>No hay registros que mostrar</p>)
-                                                              .Url(new Uri("http://localhost:36513/Home/Index?param1=óvalue11&param1=value12&param2=value2"))
-                                                                  .HeadersIfEof(true))
-      .HeadersIfEof(true))
+                  .Class("table table-striped table-hover table-bordered")
+                  .Configuration(cfg => cfg
+                      .BootstrapVersion(BootstrapVersion.Bootstrap3)
+                      .WhiteSpace(WhiteSpace.Nbsp))
+                  .AddColumn(c => c
+                      .Format(item => item.FirstName)
+                      .HeaderText("Nombre")
+                      .Sortable(true)
+                      .OnSort("sort")
+                      .SortBy("FirstName")
+                      .Visibility(() => ColumnVisibility.Visible))
+                  .AddColumn(c => c
+                      .Format(item => item.LastName)
+                      .HeaderText("Apellidos")
+                      .Sortable(true)
+                      .SortBy("LastName")
+                      .Name("LastName2"))
+                  .AddColumn("Edad", item => item.Age)
+                  .AddColumn(c => c.Format(item => item.Gender == Gender.Male ? "Hombre" : "Mujer").HeaderText("Género"))
+                  .AddColumn(c => c.Format(@<text>@(string.Format("{0:d}", item.Birthday))</text>).HeaderText("Cumpleaños"))
+                                          .AddFooterColumn(fc => fc.Format(item => "footer1"))
+                                          .AddFooterColumn(fc => fc.Format(item => "footer2").Visibility(() => ColumnVisibility.Hidden))
+                                          .AddFooterColumn(fc => fc.Format(item => "footer3"))
+                                          .Pagination(pagination => pagination
+                                              .PageIndex(Model.PageIndex)
+                                              .TotalCount(Model.TotalCount)
+                                              //.RemovedParameters(new[] { "fake"})
+                                              //.AddedParameters(new Dictionary<string, string>()
+                                              //{
+                                              //    { "debug", "true"},
+                                              //    { "stage", "producción evolutiva"}
+                                              //})
+                                              )
+                                          .Eof(@<p>No hay registros que mostrar</p>)
+                                          .Url(new Uri("http://localhost:36513/Home/Index?param1=óvalue11&param1=value12&param2=value2"))
+                                          .HeadersIfEof(true)
+)
+
 
 <script>
     function sort(url, sortBy, sortDir) {
